Bug 29957 - Weborder_mobile: Quantity is cut off if it is not 1

--- a/skins/weborder_mobile/css/main.css
+++ b/skins/weborder_mobile/css/main.css
@@ -263,6 +263,10 @@ h1, h2, h3 {
     text-decoration: underline;
 }
 
+select::-ms-expand { /*Removes default IE style*/
+    display: none;
+}
+
 .select-wrapper {
     width: 6em;
     padding: 0.3em 0;
